// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrgIdSelect should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mock-css.
  margin-bottom: 0.75rem;
"
      >
        <mock-styled.h2
          classname=""
        >
          Organisations
        </mock-styled.h2>
        <mock-styled.p
          classname="mock-css."
        >
          You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
        </mock-styled.p>
        <mock-styled.div
          classname="mock-css.
  border-radius: 0.25rem;
"
        >
          <mock-styled.div>
            <mock-styled.select
              classname="mock-css.
  width: 100%;
"
              value="SOME_ID"
            >
              <option
                value=""
              >
                Please Select
              </option>
              <option
                value="value"
              >
                name
              </option>
              <option
                value="value"
              >
                name
              </option>
            </mock-styled.select>
            <mock-styled.label
              htmlfor="myId"
            >
              Select Organisation
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mock-css.
  margin-bottom: 0.75rem;
"
    >
      <mock-styled.h2
        classname=""
      >
        Organisations
      </mock-styled.h2>
      <mock-styled.p
        classname="mock-css."
      >
        You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
      </mock-styled.p>
      <mock-styled.div
        classname="mock-css.
  border-radius: 0.25rem;
"
      >
        <mock-styled.div>
          <mock-styled.select
            classname="mock-css.
  width: 100%;
"
            value="SOME_ID"
          >
            <option
              value=""
            >
              Please Select
            </option>
            <option
              value="value"
            >
              name
            </option>
            <option
              value="value"
            >
              name
            </option>
          </mock-styled.select>
          <mock-styled.label
            htmlfor="myId"
          >
            Select Organisation
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`OrgIdSelect should match a snapshot where orgIdOptions are less than 2 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
